...
                    // Full Name
                    OutlinedTextField(
                        value = fullName,
                        onValueChange = { fullName = it },
                        shape = RoundedCornerShape(15.dp),
                        placeholder = { Text("Full Name") },
                        modifier = Modifier.fillMaxWidth().testTag("fullName"),
                        colors = TextFieldDefaults.colors(
                            focusedContainerColor = Color.White,
                            unfocusedContainerColor = Color.White,
                            focusedIndicatorColor = MotoOrange,
                            unfocusedIndicatorColor = Color.Transparent
                        )
...
                        onValueChange = { email = it },
                        shape = RoundedCornerShape(15.dp),
                        placeholder = { Text("johndoe@gmail.com") },
                        keyboardOptions = KeyboardOptions(
                            keyboardType = KeyboardType.Email
                        ),
                        modifier = Modifier.fillMaxWidth().testTag("email"),
                        colors = TextFieldDefaults.colors(
                            focusedContainerColor = Color.White,
                            unfocusedContainerColor = Color.White,
                            focusedIndicatorColor = MotoOrange,
                            unfocusedIndicatorColor = Color.Transparent
                        )
...
                        onValueChange = { phone = it },
                        shape = RoundedCornerShape(15.dp),
                        placeholder = { Text("Phone Number") },
                        keyboardOptions = KeyboardOptions(
                            keyboardType = KeyboardType.Phone
                        ),
                        modifier = Modifier.fillMaxWidth().testTag("phone"),
                        colors = TextFieldDefaults.colors(
                            focusedContainerColor = Color.White,
                            unfocusedContainerColor = Color.White,
                            focusedIndicatorColor = MotoOrange,
                            unfocusedIndicatorColor = Color.Transparent
                        )
...
                    Spacer(modifier = Modifier.height(15.dp))

                    // Password
                    OutlinedTextField(
                        value = password,
                        onValueChange = {
                            password = it
                            passwordError =
                                if (password.isNotEmpty() && !isStrongPassword(password)) {
                                    "Min 8 chars, include upper, lower, number & special character"
                                } else {
                                    null
                                }
...
                        modifier = Modifier.fillMaxWidth(),
                        verticalAlignment = Alignment.CenterVertically
                    ) {
                        Checkbox(
                            checked = terms,
                            onCheckedChange = { terms = it },
                            modifier = Modifier.fillMaxWidth().testTag("terms"),
                            colors = CheckboxDefaults.colors(
                                checkedColor = MotoOrange,
                                checkmarkColor = White
                            )
                        )
                        Text("I agree to terms & conditions")
...
                        },
                        elevation = ButtonDefaults.buttonElevation(
                            defaultElevation = 10.dp
                        ),
                        modifier = Modifier
                            .fillMaxWidth()
                            .height(56.dp).testTag("registerBtn"),
                        shape = RoundedCornerShape(12.dp),
                        colors = ButtonDefaults.buttonColors(
                            containerColor = MotoOrange,
                            contentColor = White
                        )
                    ) {
...
